# AI-Research-Assistant

./: .envo  README.md  pyproject.toml  quick_test.py
src/agents/research_assistant/: nodes.py  prompts.py  schemas.py  state.py  test_nodes.py
src/ingestion/: data_ingest.py
src/tools/: supabase_tool.py  web_search_tool.py
src/utils/: model_initializer.py  settings.py
