[project]
name = "ai-research-assistant-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Mamoon018",email = "mamonhaider11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph (>=0.4.7,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
