[project]
name = "ai-research-assistant-code"
version = "0.1.0"
description = ""
authors = [
    {name = "Mamoon018",email = "mamonhaider11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langgraph (>=0.4.7,<0.5.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "tavily-python (>=0.7.3,<0.8.0)",
    "exa-py (>=1.14.2,<2.0.0)",
    "langchain-groq (>=0.3.2,<0.4.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pypdf (>=5.6.0,<6.0.0)",
    "supabase (>=2.15.2,<3.0.0)",
    "langchain-core (>=0.3.65,<0.4.0)",
    "ipython (>=9.3.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
